# django-field-permissions

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_settings.py
docs/: ARCHITECTURE.md  OVERVIEW.md
field_permissions/: models.py
field_permissions/management/commands/: sync_field_permissions.py
src/field_permissions/: admin.py  apps.py  middleware.py  permissions.py  signals.py
src/field_permissions/migrations/: 0001_initial.py
src/field_permissions/templatetags/: field_permissions.py
tests/: conftest.py  test_admin.py  test_management_command.py  test_middleware.py  test_permissions.py  test_signals.py  test_templatetags.py
