[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-field-permissions"
version = "0.1.0"
description = "A Django package for implementing field-level permissions on model fields."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/eddiemapes/django-field-permissions"

[tool.setuptools.packages.find]
include = ["field_permissions*"]
