[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-field-permissions"
version = "1.1.0"
authors = [
    { name="Eddie Mapes", email="1999eddiem@gmail.com" },
]
description = "A Django package for implementing field-level permissions on model fields."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/eddiemapes/django-field-permissions"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_settings"
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
